--- a/styles/style.css
+++ b/styles/style.css
@@ -10,12 +10,46 @@ html {
 
 .page {
   inline-size: 1200px;
-  block-size: 100%;
   margin: auto;
+  block-size: 100%;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  align-items: center;
+}
+
+.content__details {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 490px;
+}
+
+.title {
+  font-size: 75px;
+  line-height: 94%;
+  letter-spacing: 0%;
+  font-family: 'Oswald';
+  margin-bottom: 26px;
+}
+
+.content__video-card-title {
+  font-size: 30px;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: end;
+  height: 534px;
+  width: 1140px;
+}
+
+.result {
+  margin-right: 30px;
 }
 
 h1,
@@ -48,4 +82,155 @@ ol {
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
+}
+
+.search-form, .content__video-card {
+  display: flex;
+  flex-direction: row;
+  
+}
+
+.search-form__fieldset {
+  border: 0;
+}
+
+.search-form__textfield {
+  background-color: #1b1919;
+  border-color: #fff;
+  border-style: solid;
+  border-left: 0;
+  border-right: 0;
+  color: #fff;
+}
+
+.search-form {
+  align-items: end;
+  justify-content: space-between;
+}
+
+.button {
+  background-color:#1b1919;
+  color: #fff;
+  border-color: #fff;
+  border-style: solid;
+  width: 100%;
+  cursor: pointer;
+}
+
+button:focus {
+    outline: none;
+}
+
+.content__list-item:focus {
+    outline: none;
+}
+
+button:hover{
+    text-decoration: underline;
+}
+
+.content__list-item:hover {
+    text-decoration: underline;
+}
+
+button:active {
+    color: #545050;
+}
+
+.content__list-item:active {
+    color: #545050;
+}
+
+button:focus-visible {
+    outline: 2px solid #ffffff;
+    outline-offset: 1px;
+}
+.content__list-item:focus-visible {
+    outline: 2px solid #ffffff;
+    outline-offset: 1px;
+}
+
+.search-form__label, .search-form__checkbox-list {
+  display: flex;
+  flex-direction: row;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__video-card-description-container {
+  color: #fff;
+}
+
+.content__card-link {
+  text-decoration: 0;
+}
+
+.content__list-container {
+  /* height: 185px; */
+  overflow: auto;
+}
+
+.content__video-card {
+  justify-content: space-between;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+
+}
+
+.content__list-item {
+  margin-bottom: 30px;
+  padding: 3px;
+  cursor: pointer;
+}
+
+.result__video {
+  width: 711px;
+  height: 386px;
+  margin-bottom: 16px;
+}
+
+.search-form__fieldset {
+  margin-right: 40px;
+}
+
+.search-form__submit-button {
+  height: 34px;
+  width: 194px;
+}
+
+.search-form {
+  width: 711px;
+  height: 54px;
+}
+
+.content__details {
+  width: 399px;
+  height: 534px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.more-button {
+  width: 390px;
+  height: 34px;
+}
+
+.search-form__checkbox {
+  cursor: pointer;
+}
+
+.search-form__textfield {
+  cursor: pointer;
+}
+
+.result__video {
+  cursor: pointer;
+}
+
+.result__video-container, .content__list-container {
+    position: relative;
 }
